<resources>

    <!-- chrome cast -->
    <string name="app_id">50B53429</string>
    <string name="media_route_menu_title">Play on&#8230;</string>

    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>

    <string name="custom">X-Requested-With</string>

    <string name="rating_title">Rate KSAnime</string>
    <string name="rating_message">Want more features like offline videos? Leave a rating!</string>

    <string name="okay">Okay!</string>
    <string name="close">Close</string>

    <string name="quality_title">Select Quality</string>

    <string name="fail_message">Try again later</string>
    <string name="update_failed">Update failed</string>
    <string name="fail_internet">No internet</string>
    <string name="fail_search">Search error</string>
    <string name="search_no_results">0 Results</string>

    <string name="storage_unavailable">Cannot save file</string>
    <string name="download_unavailable">Cannot download file</string>
    <string name="download_started">Download started</string>

    <string name="snackbar_update">Updating...</string>
    <string name="snackbar_refresh">Refreshing...</string>
    <string name="snackbar_download">Select episode to download</string>
    <string name="loading">Loading...</string>

    <string name="shared_preferences_key">daose</string>
    <string name="use_internal_player">useInternalPlayer</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="just_updated">Just updated</string>
    <string name="trending">Trending</string>
    <string name="more">MORE</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="starred">Starred</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>

    <string name="news_source">Source: MyAnimeList</string>

    <string name="notification_summary">New episodes available</string>

    <string name="star_list_default_description">Get notified when new episodes come out</string>
    <string name="star_list_default_title">Anime!</string>

    <string name="captcha">Solve the captcha</string>
    <string name="captcha_title">Captcha</string>
    <string name="captcha_message">AFTER the page redirects, click the button below</string>
    <string name="captcha_button">Play</string>

    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_message">This app is only a themed web browser that browses public websites hosted on third-party servers which are freely available for all internet users. Any legal issues should be taken up with the actual file hosts, as this app is not affiliated with them. Copyrights and trademarks and other promotional materials are held by their respective owners and their use is allowed under the fair use clause of the Copyright Law.</string>
    <string name="disclaimer_button">Ok</string>
</resources>
