<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/popular" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/trending" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_folder_special_black_24dp"
            android:title="@string/starred" />

        <item
            android:id="@+id/nav_downloaded"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="Downloaded" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

    </group>

</menu>
